# flutter_i2c

./: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
lib/: flutter_i2c.dart  lot_i2c.dart
lib/src/: bindings.g.dart  flutter_i2c_channel.dart  i2c.dart  lot_i2c_channel.dart
linux/: CMakeLists.txt  flutter_i2c_method.cc  flutter_i2c_plugin.cc  lot_i2c_plugin.cc
linux/include/flutter_i2c/: flutter_i2c_method.h  flutter_i2c_plugin.h
linux/include/lot_i2c/: lot_i2c_plugin.h
linux/lot_i2c/: CMakeLists.txt  lot_i2c.cpp  lot_i2c.h
test/: flutter_i2c_test.dart
